[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/INVASION2000.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://Music/menuMusic.wav" type="AudioStream" id=3]
[ext_resource path="res://images/1.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 1 )

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 134.0
margin_right = 1026.0
margin_bottom = 439.0
custom_fonts/font = SubResource( 1 )
text = "Galatic Space"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 427.0
margin_top = 280.0
margin_right = 613.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar tu Viaje"

[node name="Button2" type="Button" parent="."]
margin_left = 428.0
margin_top = 377.0
margin_right = 614.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
text = "Instrucciones"

[node name="music" type="Node2D" parent="."]

[node name="menuMusic" type="AudioStreamPlayer" parent="music"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 517.75, 307 )
scale = Vector2( 0.592709, 0.62449 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
